<resources>
    <string name="app_name">LazyStats</string>
    <string name="action_settings">Settings</string>
    <string name="btn_logout_from_google">Logout from Google</string>
    <string name="btn_revoke_access">Revoke Access</string>
    <string name="loading">Loading</string>
    <string name="title_activity_master">MasterActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="logout_menu">Logout</string>
    <string name="revoke_menu">Revoke Access</string>
    <string name="action_signout">com.tony.lazystats.ACTION_SIGNOUT</string>
    <string name="action_revoke">com.tony.lazystats.ACTION_REVOKE</string>
    <string name="user_cred_sp">com.tony.lazystats.USER_CREDS</string>

    <string name="create">Create</string>
    <string name="txtName">Name</string>
    <string name="hintStatName">Enter a name</string>
    <string name="txtRemark">Remark</string>
    <string name="hintStatRemark">Enter a remark</string>
    <string name="profile_image">Profile Image</string>
    <string name="action_createStats">com.tony.lazystats.ACTION_CREATESTATS</string>

    <string name="authority">com.tony.lazystats.provider</string>
    <string name="register">Register</string>
    <string name="dataValue">Data Value</string>
</resources>
