<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:id="@+id/nameRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/text_StatName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/txtName"
            android:layout_weight="1"
            android:gravity="center"/>
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/editText_StatName"
            android:inputType="text"
            android:hint="@string/hintStatName"
            android:layout_weight="2"
            android:maxLength="15"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/remarkRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/text_StatRemark"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/txtRemark"
            android:layout_weight="1"
            android:gravity="center"/>
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/editText_StatRemark"
            android:inputType="text"
            android:hint="@string/hintStatRemark"
            android:layout_weight="2"
            android:maxLength="15"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/btnRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:id="@+id/btn_CreateStat"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/create" />
    </LinearLayout>
    </LinearLayout>

